--- a/src/components/ActiveEventRegistrationDetails/index.css
+++ b/src/components/ActiveEventRegistrationDetails/index.css
@@ -1,1 +1,21 @@
 /* Write your CSS here */
+.heading {
+  font-size: 20px;
+  color: #475569;
+  text-align: center;
+}
+.paragraph {
+  font-size: 20px;
+  text-align: center;
+  color: #64748b;
+}
+.reg-button {
+  background-color: #0967d2;
+  color: #ffffff;
+  padding: 10px;
+  border-radius: 10px;
+  outline: none;
+  border: 0px;
+  cursor: pointer;
+  width: 70%;
+}
